unpackaged/main/default/objects/Staff_Members__c/Staff_Members__c.object-meta.xml
<CustomObject>
    <label>Staff Member</label>
    <nameField>
        <displayFormat>SM-{0}</displayFormat>
        <label>Staff Member Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>