unpackaged/main/default/objects/Staff_Members__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <formula>Contact_Name__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client</label>
    <type>Text</type>
</CustomField>