unpackaged/main/default/objects/Staff_Members__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>IF(ISPICKVAL( Staff_Member__r.Preferred_Email__c, "Business"),  Staff_Member__r.Email,
IF(ISPICKVAL( Staff_Member__r.Preferred_Email__c, "Business"),  Staff_Member__r.Personal_Email__c, Staff_Member__r.Email))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>