unpackaged/main/default/objects/Staff_Members__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <formula>Staff_Member__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position (Title on Contact)</label>
    <type>Text</type>
</CustomField>