unpackaged/main/default/objects/Staff_Members__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>