unpackaged/main/default/objects/Staff_Members__c/fields/Staff_Member__c.field-meta.xml
<CustomField>
    <fullName>Staff_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Staff_Members</relationshipName>
    <type>Lookup</type>
</CustomField>